# asyncviz

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE_NOTES.md  docker-compose.yml  log.txt  pyproject.toml  sample_runtime.py
.github/workflows/: backend.yml  frontend.yml
asyncviz/: __init__.py  __main__.py  config.py  start.py
asyncviz/benchmarks/: __init__.py  __main__.py  benchmark_baselines.py  benchmark_configuration.py  benchmark_diagnostics.py  benchmark_models.py  benchmark_observability.py  benchmark_registry.py  benchmark_runner.py  benchmark_statistics.py  benchmark_thresholds.py  benchmark_tracing.py
asyncviz/bootstrap/: __init__.py  bootstrap.py  browser.py  config.py  runtime.py  services.py  validation.py
asyncviz/cli/: __init__.py  entrypoint.py  exit_codes.py  main.py  output.py  parser.py
asyncviz/configuration/: __init__.py  runtime_browser.py  runtime_cli_mapping.py  runtime_configuration.py  runtime_dashboard.py  runtime_defaults.py  runtime_diagnostics.py  runtime_environment.py  runtime_metadata.py  runtime_monitoring.py  runtime_network.py  runtime_observability.py  runtime_options.py  runtime_overrides.py  runtime_profiles.py  runtime_recording.py  runtime_replay.py  runtime_resolution.py  runtime_security.py  runtime_serialization.py  runtime_sources.py  runtime_tracing.py  runtime_validation.py  runtime_warning.py
asyncviz/dashboard/: __init__.py  app.py  asgi.py  dependencies.py  exceptions.py  lifespan.py  runner.py
asyncviz/instrumentation/: __init__.py
asyncviz/packaging/: __init__.py  assets.py  build_metadata.py  diagnostics.py  versioning.py  wheel_validation.py
asyncviz/replay/: __init__.py
asyncviz/runtime/: __init__.py
asyncviz/stress/: __init__.py  _builtin_scenarios.py  stress_configuration.py  stress_diagnostics.py  stress_integrity.py  stress_observability.py  stress_registry.py  stress_runner.py  stress_thresholds.py  stress_tracing.py
asyncviz/utils/: env.py  logging.py
docker/: backend.Dockerfile  frontend.Dockerfile  frontend.nginx.conf
examples/basic/: README.md  app.py
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
scripts/backend/: format.sh  install.sh  lint.sh  run.sh  test.sh
scripts/ci/: all.sh  backend.sh  frontend.sh  package-smoke.sh
scripts/dev/: start-all.sh  start-backend.sh  start-frontend.sh  start.py
scripts/docker/: build.sh  down.sh  exec.sh  logs.sh  reset.sh  up.sh
scripts/frontend/: build-prod.sh  build.sh  clean-static.sh  format.sh  install.sh  lint.sh  run.sh  sync-static.sh  typecheck.sh  verify-static.sh
scripts/packaging/: build_frontend.py  clean_build.py  inspect_wheel_assets.py  package_frontend.py  publish_frontend_assets.py  release_checks.py  validate_frontend_assets.py  verify_dashboard_bundle.py  verify_package.py
scripts/utils/: check-ports.sh  clean.sh  doctor.sh  kill-stale.sh  lib.sh
tests/: conftest.py
tests/integration/: _framework.py  integration_configuration.py  integration_diagnostics.py  integration_models.py  integration_observability.py  integration_registry.py  integration_runner.py  integration_thresholds.py  integration_tracing.py  test_cors_middleware.py  test_event_bus_lifecycle.py  test_frontend_mount.py  test_health.py  test_instrumentation_lifecycle.py  test_replay_bundle_adapter.py  test_replay_dashboard_sink.py  test_runtime_api.py  test_runtime_tasks_api.py  test_start.py  test_task_registry_lifecycle.py  test_websocket.py  test_websocket_bridge.py
tests/unit/: test_asgi.py  test_asyncio_patcher.py  test_bootstrap_config.py  test_bootstrap_runtime.py  test_browser.py  test_cancellation_origin.py  test_clock_integration.py  test_config.py  test_dashboard_backend.py  test_env.py  test_event_bus.py  test_event_models.py  test_event_replay_buffer.py  test_frontend_serving.py  test_health.py  test_internal_event_queue.py  test_lineage.py  test_logging.py  test_metrics_aggregator.py  test_package_api.py  test_protocol.py  test_replay_marker_derivation.py  test_replay_status_broadcaster.py  test_runtime_clock.py  test_runtime_snapshot.py  test_runtime_state.py  test_runtime_state_store.py  test_runtime_streaming.py  test_runtime_warnings.py  test_shutdown.py  test_task_cancellation.py  test_task_completed_contract.py  test_task_lifecycle_tracking.py  test_task_reducers.py  (+5 more)
validation/: VALIDATION_GUIDE.md  _common.py  blocking_runtime.py  executor_runtime.py  gather_dependency_runtime.py  mega_runtime.py  queue_stress_runtime.py  run_validation.py  semaphore_runtime.py
(+1972 files in other folders)
