[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "asyncviz"
version = "0.1.0"
description = "Real-time runtime visualization and debugging platform for Python asyncio applications."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "AsyncViz" }]
maintainers = [{ name = "AsyncViz" }]
keywords = [
    "asyncio",
    "visualization",
    "debugging",
    "observability",
    "profiler",
    "diagnostics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
    "Framework :: FastAPI",
    "Framework :: AsyncIO",
]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
# Tools needed to develop AsyncViz itself.
dev = [
    "httpx>=0.27",
    "pre-commit>=3.8",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# Tools needed to build + release artifacts. Kept separate from
# ``dev`` so CI release jobs install the minimum tooling.
build = [
    "build>=1.2",
    "twine>=5.1",
]
# Convenience meta-extra: install everything a contributor needs in
# one go. Re-references the other extras to avoid drift.
all = [
    "asyncviz[dev]",
    "asyncviz[build]",
]

[project.scripts]
asyncviz = "asyncviz.cli:main"

[project.urls]
Homepage = "https://github.com/asyncviz/asyncviz"
Documentation = "https://github.com/asyncviz/asyncviz"
Issues = "https://github.com/asyncviz/asyncviz/issues"
Source = "https://github.com/asyncviz/asyncviz"
Changelog = "https://github.com/asyncviz/asyncviz/releases"

# ── Hatch build configuration ─────────────────────────────────────────────

[tool.hatch.build]
# ``asyncviz/dashboard/static/`` is generated by the frontend build
# pipeline. Listing it as an artifact makes Hatch include the directory
# even though ``.gitignore`` excludes its contents from the source tree.
artifacts = [
    "asyncviz/dashboard/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["asyncviz"]
# The embedded frontend lives inside the ``asyncviz`` package, so the
# default discovery includes it. We list the include rule explicitly
# to defend against accidental package-discovery regressions.
include = [
    "asyncviz/**/*",
]
exclude = [
    "asyncviz/**/__pycache__",
    "asyncviz/**/*.pyc",
]

[tool.hatch.build.targets.wheel.force-include]
"asyncviz/py.typed" = "asyncviz/py.typed"

[tool.hatch.build.targets.sdist]
include = [
    "/asyncviz",
    "/pyproject.toml",
    "/README.md",
    "/LICENSE",
    "/MANIFEST.in",
]
exclude = [
    "asyncviz/**/__pycache__",
    "asyncviz/**/*.pyc",
    "**/.DS_Store",
]

# ── Ruff ──────────────────────────────────────────────────────────────────

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["frontend", "build", "dist", ".venv"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "C4",     # flake8-comprehensions
    "ASYNC",  # flake8-async
    "RUF",    # ruff-specific
]
ignore = [
    "B008",   # function calls in defaults (FastAPI Depends pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["asyncviz"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ── Pytest ────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: marks tests that exercise the running server",
    "packaging: marks tests that build or inspect wheels / sdists (may be slow)",
]

# ── Coverage ──────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["asyncviz"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
    "\\.\\.\\.",
    "pragma: no cover",
]
